# minipot-cli

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cache.rs  config.rs  downloadable.rs  java.rs  jbr.rs  lock.rs  main.rs  paper.rs
src/commands/: bot.rs  mod.rs  prepare.rs  remove.rs  run.rs  stop.rs  sync.rs  update.rs
src/sources/: github.rs  hangar.rs  mod.rs  modrinth.rs
