[package]
name = "minipot-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "minipot"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "2"
libc = "0.2"
indicatif = "0.17"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
dirs = "5"
